--- a/stylemain.css
+++ b/stylemain.css
@@ -1,105 +1,117 @@
 *
 {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
+
 .toggle
 {
-  position: relative;
-  left: 80vw;
-  color: blueviolet;
+    float: right;
+    color: blueviolet;
 }
+
 .buttonactive
 {
-  background-color:black ;
+    background-color:black ;
 }
+
 .buttoninactive
 {
-  background-color:white ;
+    background-color:white ;
 }
+
 a
 {
-
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
 }
+
 .wrapper
 {
-  width: 100%;
-  height: 100vh;
-  background-color: green;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+    width: 100%;
+    height: 100vh;
+    background-color: green;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
+
 img
 {
-  float: left;
-  background-color: pink;
-  width: 100px;
+    margin: auto;
+    width: 100px;
 }
+
 .content
 {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 }
+
 .sidebar
 {
-  width: 15vw;
-  height: 100vh;
-  background-color: blue;
+    width: 15vw;
+    height: 100vh;
+    background-color: blue;
 }
+
 .memberCard
 {
-  width: 80px;
-  height: 120px;
-  background-color: white;
-  
+    width: 80px;
+    height: 120px;
+    background-color: white;
 }
+
 .eventCard
 {
-  width: 80px;
-  height: 120px;
-  background-color: white;
-  
+    width: 80px;
+    height: 120px;
+    background-color: white;
 }
+
 .main
 {
-  width:85vw;
-  height: 100vh;
-  background-color: orange;
+    width:85vw;
+    height: 100vh;
+    background-color: orange;
 }
+
 nav
 {
-  height: 50px;
-  width: 100%;
-  background-color: yellow;
-  vertical-align: center;
+    height: 50px;
+    width: 100%;
+    line-height: 75px;
+    background-color: #6CA0D1;
 }
+
 .yearcontainer
 {
 
 
 }
+
 .yearli
 {
-  color: white;
-  border-bottom: 1px solid black;
-  overflow:hidden;
+    color: white;
+    border-bottom: 1px solid black;
+    overflow:hidden;
 }
+
 .active
 {
-  background-color: white;
-  color: black;
+    background-color: white;
+    color: black;
 }
+
 .displayactive 
 {
-  display: inline;
+    display: inline;
 }
+
 .displayinactive
 {
-  display: none;
+    display: none;
 }
