--- a/stylemain.css
+++ b/stylemain.css
@@ -1,35 +1,126 @@
-*
-{
+*{
     margin: 0;
     padding: 0;
 }
 
-.toggle
-{
-    float: right;
-    color: blueviolet;
+
+
+
+
+
+
+
+
+
+
+/*::::::::::::::::: CSS for nav bar :::::::::::::::::::::::::::::::::*/
+
+nav{
+    padding-top: 15px;
+    height: 50px;
+    width: 100%;
+
+    background-color: #6ca0d1;
 }
 
-.buttonactive
-{
-    background-color:black ;
+#IECSElogo{
+    /*margin: auto;*/
+    /*line-height: 75px;*/
+    padding-left: 20px;
+    width: 100px;
 }
 
-.buttoninactive
-{
-    background-color:white ;
+
+#alumniText{
+    font-size: 25px;
+    padding-left: 5px;
+    vertical-align: bottom;
+    color: white;
 }
 
-a
-{
+
+
+
+
+
+
+
+
+
+
+
+
+/*::::::::::::::::::::::::::: CSS for side bar ::::::::::::::::::::::::::::::;*/
+.sidebar{
+    width: 15vw;
+    height: 100vh;
+    background-color: #DBEEFF;
+}
+
+.sidebar-headings{
+    color: #3a49d7;
+    
+    font-size: 25px; /*controls logo size*/
+      
+    padding-top: 25px;
+    padding-left: 25px;
+}
+
+.sidebar-heading-text{
+
+    font-size: 30px; /*controls tetx size*/
+
+
+    padding-left: 25px; 
+    vertical-align: text-top;
+}
+
+a{
     display: inline-block;
     width: 100%;
     height: 100%;
     padding: 10px;
 }
 
-.wrapper
-{
+
+.yearli{
+    color: #3a49d7;
+    font-size: 20px;
+    padding-left: 40px;
+
+    /*border-bottom: 1px solid black;*/
+    overflow: hidden;
+}
+
+.yearli:hover {
+    cursor: pointer;
+}
+
+.active{
+    background-color: #DBEEFF;
+    /*background-color: white;*/
+    font-weight: bold;
+    color: #6a74d3;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*::::::::::::::: CSS for main content::::::::::::::::::::::::::::: */
+
+.wrapper{
     width: 100%;
     height: 100vh;
     background-color: green;
@@ -38,80 +129,151 @@ a
     flex-direction: row;
 }
 
-img
-{
-    margin: auto;
-    width: 100px;
-}
-
-.content
-{
+.content{
     width: 100%;
     display: flex;
     flex-direction: row;
-}
-
-.sidebar
-{
-    width: 15vw;
-    height: 100vh;
-    background-color: blue;
-}
-
-.memberCard
-{
-    width: 80px;
-    height: 120px;
-    background-color: white;
-}
-
-.eventCard
-{
-    width: 80px;
-    height: 120px;
-    background-color: white;
 }
 
 .main
 {
     width:85vw;
     height: 100vh;
-    background-color: orange;
-}
-
-nav
-{
-    height: 50px;
-    width: 100%;
-    line-height: 75px;
-    background-color: #6CA0D1;
-}
-
-.yearcontainer
-{
-
-
-}
-
-.yearli
-{
-    color: white;
-    border-bottom: 1px solid black;
-    overflow:hidden;
-}
-
-.active
-{
     background-color: white;
-    color: black;
+
 }
+  
+
+
+
+
+
+
+
+
+
+
+/*::::::::::::::: CSS to show or hide members and events ::::::::::::::::::::::::::::: */
 
 .displayactive 
 {
-    display: inline;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .displayinactive
 {
     display: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* :::::::::::::::::::::::::: css for toggel buttons ::::::::::::::::::::::::::::: */
+
+#toggle-button-group{
+    float: right;
+    font-size: 0;
+    padding-top: 10px;
+    padding-right: 10px;
+}
+
+.member-button-style{
+    vertical-align: middle;
+    border: 10px;
+    border-right: 0px;
+
+    height: 30px;
+    width: 120px;
+    font-size: 20px;  
+    font-family: 'Source Sans Pro', sans-serif;
+
+    color: white;
+    background: #BFC5C4;
+
+    text-align: center;
+    border-radius: 10px 0px 0px 10px;
+    
+    cursor: pointer;
+
+}
+
+.event-button-style{
+    vertical-align: middle;
+    border: 10px;
+    border-left: 0px;
+
+    height: 30px;
+    width: 120px;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px; 
+    
+    color: white;
+    background: #BFC5C4;
+
+    text-align: center;
+    border-radius: 0px 10px 10px 0px;
+    
+    cursor: pointer;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: #A3A3A3;
+}
+
+button:active {
+    background-color: #00D460;
+}
+
+button:focus {
+    background-color: #00D460;
+    outline:0;
+}
+
+.buttonselected{
+    background-color: #00D460;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ::::::::::::::::::: CSS for cards ::::::::::::::::::::::::::::*/
+
+.memberCard
+{
+    margin: 20px;
+    width: 80px;
+    height: 120px;
+    background-color: blue;
+}
+
+.eventCard
+{
+    margin:20px;
+    width: 80px;
+    height: 120px;
+    background-color: green;
+}
+
+
